UI: Fix slide bar vertical alignment

--- a/react/app/src/app.scss
+++ b/react/app/src/app.scss
@@ -306,67 +306,70 @@ padding: 10px;
   margin-right: 20px;
   margin-top: 20px;
   margin-bottom: 20px; }
-  .close-symbol:after {
-    content: "\2716";
-    color: #1C2833;;
+.close-symbol:after {
+  content: "\2716";
+  color: #1C2833;;
   margin-right:10px;
   font-size:1.8em;
-
-    }
-   .close-symbol:hover:after {
-     cursor:pointer;
-     color:black;
-   }
+}
+.close-symbol:hover:after {
+  cursor:pointer;
+  color:black;
+}
 input[type=range].workers-slider {
-    width: 200px;
+  width: 200px;
   display: inline-block;}
 
+.workers-slider {
+  position: relative;
+  top: 6px;
+}
 
-  textarea {
+textarea {
     padding:10px;
-  }
-  .selectedRow {
-    background-color:#006998;
-    color:white;
-  }
-  .notSelectedRow {
-    background-color: transparent;
-  }
-  input[type=checkbox] {
-    cursor: pointer;
-  }
-  #jobsContainer {
-    padding:10px;
-  //  height: 45%;
-   overflow-y:auto;
-  }
-  #jobTableArea {
-    background-color: white;
-    min-width: 1500px;
-  }
-  .job-details-container {
-    margin-bottom:10px;
-    padding-bottom: 10px;
-     border-bottom: 1px solid lightgray;
-  }
-  .chart-item {
-    margin-left: 20px;
-    border-left: 1px solid #e8e8e8;
-    padding-left: 15px; }
+}
+.selectedRow {
+  background-color:#006998;
+  color:white;
+}
+.notSelectedRow {
+  background-color: transparent;
+}
+input[type=checkbox] {
+  cursor: pointer;
+}
+#jobsContainer {
+  padding:10px;
+//  height: 45%;
+  overflow-y:auto;
+}
+#jobTableArea {
+  background-color: white;
+  min-width: 1500px;
+}
+.job-details-container {
+  margin-bottom:10px;
+  padding-bottom: 10px;
+    border-bottom: 1px solid lightgray;
+}
+.chart-item {
+  margin-left: 20px;
+  border-left: 1px solid #e8e8e8;
+  padding-left: 15px; }
 
-  .align-top {
+.align-top {
 
-    vertical-align: top;
-  }
-  .job-summary {
-    width: 320px;
-  }
-  .state-failed {
-    color: red;
-  }
-  .state-ok {
-    color: #33cc33;
-  }
+  vertical-align: top;
+}
+.job-summary {
+  width: 320px;
+}
+.state-failed {
+  color: red;
+}
+.state-ok {
+  color: #33cc33;
+}
 .state-warning {
   color: yellow;
 }
